--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,6 +20,8 @@ spring:
         jdbc:
           batch_size: ${batch_insertion.batch_size}
         order_inserts: true
+        order_updates: true
+        batch_versioned_data: true
 #        format_sql: false
     open-in-view: false
 #  sql:
