--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -5,5 +5,6 @@ spring.datasource.url=jdbc:tc:postgresql:14.6-alpine:///test?user=postgres&passw
 #spring.datasource.username=${POSTGRES_USER_NAME}
 #spring.datasource.password=${POSTGRES_PASSWORD}
 spring.jpa.properties.hibernate.generate_statistics=false
+spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.jdbc.batch_size=${batch_insertion.batch_size}
 #spring.datasource.hikari.maximum-pool-size=100
